numbers display automatically; answer displayed after button click

--- a/MultiplyGame.html
+++ b/MultiplyGame.html
@@ -21,7 +21,7 @@
         <div class="row display-1">Let's multiply!</div>
 
         <div class="row">
-            <button type="button" class="btn btn-danger btn-lg" id="myBtn" onclick="playGame()">PLAY</button>
+            <button type="button" class="btn btn-danger btn-lg" id="myBtn" onclick="playGame(x, y)">PLAY</button>
         </div>
 
         <div class="row">
