created working display and check answer buttons

--- a/MultiplyGame.html
+++ b/MultiplyGame.html
@@ -21,7 +21,16 @@
         <div class="row display-1">Let's multiply!</div>
 
         <div class="row">
-            <button type="button" class="btn btn-danger btn-lg" id="myBtn" onclick="playGame(x, y)">PLAY</button>
+
+
+            <div class="col-sm display-1">
+                <button type="button" class="btn btn-danger btn-lg" id="myBtn" onclick="displayMath()">PLAY</button>
+            </div>
+            <div class="col-sm display-1">
+                <button type="button" class="btn btn-danger btn-lg" id="checkBtn"
+                    onclick="checkAns(x, y)">CHECK</button>
+            </div>
+
         </div>
 
         <div class="row">
